--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,8 @@
     "ember-cli-shims": "0.1.1",
     "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
-    "font-awesome": "~4.5.0"
+    "font-awesome": "~4.5.0",
+    "leaflet": "~0.7.7",
+    "leaflet-plugins": "^1.6.0"
   }
 }
