--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "ember-data": "^2.4.2",
     "ember-export-application-global": "^1.0.5",
     "ember-font-awesome": "^2.1.0",
+    "ember-leaflet": "2.2.2",
+    "ember-leaflet-google-tile-layer": "0.0.2",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "1.1.0-beta.4",
