adds dotenv package

--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "eslint-config-rtablada": "^1.0.1",
     "loader.js": "^4.0.1",
     "sass-lint": "^1.6.2"
+  },
+  "dependencies": {
+    "dotenv": "^2.0.0"
   }
 }
